# controllers/auth.js
@@ -21,7 +21,15 @@ const register = async (req,res)=>{
 
   // from module 
   const token = user.createJWT()
-  res.status(StatusCodes.CREATED).json({user:{name:user.name,email:user.email},token})
+  res.status(StatusCodes.CREATED).json({
+    user: { 
+      email:user.email,
+      lastName:user.lastName,
+      rol:user.rol,
+      name: user.name,
+      token
+    }
+  })
 
 }
 
@@ -49,7 +57,50 @@ const login = async (req,res)=>{
 
 
   const token = user.createJWT()
-  res.status(StatusCodes.CREATED).json({user:{name:user.name,email:user.email},token})
+  res.status(StatusCodes.CREATED).json({
+    user: { 
+      email:user.email,
+      lastName:user.lastName,
+      rol:user.rol,
+      name: user.name,
+      token
+    }
+  })
 }
 
-module.exports = {register,login}
+
+const UpdateUser = async (req,res)=>{
+  const {email,name,lastName,rol} = req.body
+  
+  if(!email || !name || !lastName || !rol){
+    throw new BadRequestError('Please provide all values')
+  }
+
+  const user = await User.findOne({_id: req.user.userId})
+
+  user.email = email
+  user.name = name
+  user.lastName = lastName
+  user.rol = rol
+
+  await user.save()
+
+  const token = user.createJWT()
+
+  res.status(StatusCodes.CREATED).json({ 
+    
+    user: { 
+      email:user.email,
+      lastName:user.lastName,
+      rol:user.rol,
+      name: user.name,
+      token
+    }
+  })
+
+}
+module.exports = {
+  register,
+  login,
+  UpdateUser
+}
