# models/User.js
@@ -23,10 +23,26 @@ const UserSchema = new mongoose.Schema({
     required: [true, 'Please provide password'],
     minlength: 6,
   },
+  lastName:{
+    type:String,
+    trim:true,
+    maxlength:20,
+    default: 'last name'
+
+  },
+  rol:{
+    type:String,
+    trim:true,// any space added will be trim
+    maxlength:20,
+    default: 'petter person'
+  }
 })
 
 // hash the password
 UserSchema.pre('save', async function () {
+  if(!this.isModified('password')){
+    return ;
+  }
   const salt = await bcrypt.genSalt(10)
   this.password = await bcrypt.hash(this.password, salt)
 })
