# routes/Courses.js
@@ -1,7 +1,9 @@
 const express = require('express')
-
+const testUser = require('../middleware/testUser')
 const router = express.Router()
+
 const {
+  showStats,
   createCourse,
   deleteCourse,
   getAllCourses,
@@ -9,8 +11,12 @@ const {
   getSingleCourse,
 } = require('../controllers/courses')
 
-router.route('/').post(createCourse).get(getAllCourses)
 
-router.route('/:id').get(getSingleCourse).delete(deleteCourse).patch(updateCourse)
+router.route('/').post(testUser,createCourse).get(getAllCourses)
+
+router.route('/stats').get(showStats)
+
+
+router.route('/:id').get(getSingleCourse).delete(testUser,deleteCourse).patch(testUser,updateCourse)
 
 module.exports = router
